k8s/apps/podinfo/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: podinfo
      http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - podinfo
